# anchor

./: .env.example  .env.local copy.example  .env.local.example  .gitignore  .importlinter  AGENTS.md  App.tsx  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  EXTENSIONS.md  LICENSE  OIP.md  PUBLISHING.md  README.md  SECURITY.md  conftest.py  hatch_build.py  index.html  metadata.json  mkdocs.yml  next.config.ts  output_bboxes.txt  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  tailwind.config.cjs  tailwind.config.js  todos.md  tsconfig.json  types.ts
backend/: .env.example  README.md  SQL_PLAN.md  SYSTEM_FLOW.md  debug_db.py  main.py  pyproject.toml  test.ipynb
backend/diagrams/animated/: README.md  index.html
backend/evals/: README.md  __init__.py  eval_agent_canvas_scalar.py  grader.py  logfire_notebook_setup.py  metrics.py  run_groundedness_eval.py  run_retrieval_eval.py  runs_dashboard.ipynb  summarize.py  token_utils.py  trace_logger.py
backend/evals/datasets/: README.md  qa_gold.jsonl  retrieval_gold.jsonl
backend/evals/fixtures/: lkh_canvas_facts.json  sample_canvas_facts.json
backend/evals/reports/: run_report_6b67fc3c1447403f929173ad7da8da7f.html
backend/scripts/: polish_silver_md.py  rebuild_indexes.py  reingest_all.py  reset_tables.py  run_pipeline.py
backend/src/: active_document.py  agent.py  config.py  document_service.py  embeddings.py  logger.py  model.py  models_service.py  page_image_service.py  request_context.py  types.py  ui_logic.py  vector_store.py
backend/src/agent/: README.md  __init__.py  agent copy.py  agent.py  core.py  deps.py  discovery.py  helpers.py  ketju_agent.py  llm.py  models.py  prompts.py  state.py  types.py  utils.py
backend/src/agent/capabilities/: __init__.py  base.py  canvas.py  context.py  document_vision.py  fmu.py  knowledge.py  product_data.py  router.py
backend/src/agent/capabilities/engineering_knowledge/: __init__.py  pump.py
backend/src/agent/knowledge/engineering/pump_curves/: sample_code.py
backend/src/agent/prompts/: system.py
backend/src/agent/tools/: __init__.py  canvas.py  conversation.py  document.py  fmu.py  knowledge.py  product_data.py  rag_tools.py  retrieval.py  ui_rendering.py  vision.py
backend/src/api/: __init__.py  file_provider.py  file_service.py  routes_config.py  routes_conversations.py  routes_documents.py  routes_fmu.py  routes_search.py  routes_snippets.py  schemas.py  security.py
backend/src/common/: types.py
backend/src/core/: __init__.py  config.py  context.py  db_init.py  logging.py  provenance.py  security.py
backend/src/docling_processing/: docling_converter.py  formatters.py
backend/src/documents/: embeddings.py  service.py  store.py
backend/src/documents/docling/: __init__.py
backend/src/fmu/: service.py
backend/src/ingestion/: PIPELINE.md  README.md  __init__.py  bronze.py  cli.py  embed.py  gold.py  knowledge_graph.py  mcp_server.py  openai_clients.py  pipeline.py  query_index.py  silver.py  tags.py
backend/src/kb_engine/: __init__.py  contracts.py  docling_cache.py  engine.py  ingest.py  patch.py  pgvector.py  query.py  rag_engine.py  rich_docling.py  rich_docling2.py  search_models.py
backend/src/kb_engine/patches/: __init__.py  llama_index_node_with_score.py
backend/src/kb_engine/utils/: __init__.py  pdf_rendering.py
backend/src/knowledge_base/: __init__.py  conversation_store.py  doc_service2.py  embeddings.py  ketju_integration.py  rag_handlers.py  service.py  vector_store.py
backend/src/knowledge_base/docling/: formatters.py
backend/src/knowledge_base/sql/: chunks.sql  documents.sql  images.sql  init.sql  stats.sql  toc.sql
backend/src/knowledge_base/sql/archieve/chunks/: delete_by_doc_id.sql  get_by_section.sql  get_metadata.sql  insert.sql  search.sql  search_by_doc.sql
backend/src/knowledge_base/sql/archieve/documents/: delete.sql  find_by_hash.sql  find_by_url.sql  get.sql  insert.sql  list.sql  update_chunk_count.sql  update_page_count.sql
backend/src/knowledge_base/sql/archieve/images/: doc_delete_by_doc_id.sql  doc_get.sql  doc_get_by_pages.sql  doc_get_by_type.sql  doc_insert.sql  page_delete_by_doc_id.sql  page_get.sql  page_get_batch.sql  page_get_batch_multi_doc.sql  page_insert.sql
backend/src/knowledge_base/sql/archieve/init/: init_chunks_index.sql  init_chunks_table.sql  init_document_images_index.sql  init_document_images_table.sql  init_document_toc_table.sql  init_documents_table.sql  init_page_images_table.sql  init_schema.sql
backend/src/knowledge_base/sql/archieve/stats/: count_chunks.sql  count_document_images.sql  count_documents.sql  count_page_images.sql  count_processed_docs.sql  reset.sql
backend/src/knowledge_base/sql/archieve/toc/: get.sql  upsert.sql
backend/src/observability/langfuse/: OBSERVABILITY_COMPARISON.md  README.md  config.py  verify_langfuse.py
backend/src/prompts/: system.py
backend/src/shared/: __init__.py  content_parsers.py  types.py  ui_components.py  ui_formatters.py
backend/src/tools/: rag_tools.py
backend/src/ui/: builder.py
backend/tests/: test_alfa_laval_index.py  test_data_dir_override.py  test_gold_regions.py  test_multi_doc_index.py  test_openai_polisher_live.py  test_silver_bbox_helpers.py  test_silver_build_index.py  test_silver_pages_loader.py  test_silver_pages_meta.py  test_silver_polish.py  test_silver_render.py  test_tags.py
backend/tests/test_data/full_pipeline/: embeddings.jsonl  knowledge_graph.json
backend/tests/test_data/full_pipeline/gold/alfa-laval-lkh-centrifugal-pump/pages/: 1.regions.json  2.regions.json  3.regions.json  4.regions.json
backend/tests/test_data/full_pipeline/silver/alfa-laval-lkh-centrifugal-pump/: index.json
backend/tests/test_data/full_pipeline/silver/alfa-laval-lkh-centrifugal-pump/pages/: 1.raw.md
backend/tests/test_data/pipeline_run/gold/alfa-laval-lkh-centrifugal-pump/pages/: 2.regions.json
backend/tests/test_data/pipeline_run/silver/alfa-laval-lkh-centrifugal-pump/: docling.json  pages.meta.json
backend/tests/test_data/polisher_live/: 2.polished.md  2.raw.md
docs/: index.md  (+24 more)
(+693 files in other folders)
