[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anchor"
version = "0.2.0"
description = "Anchor v2 — agent-first knowledge canvas (hexagonal modular monolith)"
requires-python = ">=3.12"
authors = [{name = "Christoffer Björkskog"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "docling>=2.63.0",
    "pymupdf>=1.27.2.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.5.0",
    "openai>=1.0",
    "mcp>=1.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "typer>=0.12.0",
    "sse-starlette>=2.1.0",
    "trimesh>=4.0",
    "numpy>=1.26",
    "playwright>=1.59.0",
    "sentence-transformers>=5.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "import-linter>=2.0",
    "ruff>=0.6.0",
    "Pillow>=10.0",
]
local-embed = [
    "sentence-transformers>=3.0",
]
fmus = [
    "fmpy>=0.3",
]

[project.scripts]
anchor = "anchor.adapters.cli.main:app"
anchor-mcp = "anchor.adapters.mcp.stdio_main:main"

# Tell hatch to include web/dist/ as a build artifact even though it's
# gitignored. Without this, sdist excludes the built frontend (because
# `.gitignore` lists `web/dist/`), and the sdist→wheel roundtrip done by
# `uv build` fails when it can't find web/dist for the force-include.
[tool.hatch.build]
artifacts = ["web/dist/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/anchor"]

[tool.hatch.build.targets.wheel.force-include]
"web/dist" = "anchor/_web_dist"

[tool.hatch.build.targets.sdist]
include = [
    "src/anchor",
    "web",
    "tests",
    "scripts",
    "README.md",
    "EXTENSIONS.md",
    "OIP.md",
    "conftest.py",
    ".importlinter",
    "pyproject.toml",
]
exclude = [
    "web/node_modules",
    "**/__pycache__",
    "**/.pytest_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
# `-m slow` opt-in for integration tests that need real chromium / network.
addopts = "-m 'not slow'"
markers = [
    "slow: integration tests that require external resources (chromium, running server, etc.).",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
