[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# PyPI distribution name. The Python import path stays ``anchor`` (the
# package under ``src/anchor/``), only the dist name picks up the
# ``-kb`` suffix to clear the squatted ``anchor`` on PyPI and to leave
# room for a future split into ``anchor-canvas`` + ``anchor-canvas-pdfs``
# + ``anchor-canvas-fmus`` etc. ``anchor-kb`` then becomes a thin
# meta-package depending on those, the same pattern ``langchain`` uses.
name = "anchor-kb"
version = "0.2.1"
description = "ANCHOR, Agent-Native Canvas to Help Organize Resources with PDF ingest, FMU simulation, and source-grounded provenance"
requires-python = ">=3.12"
authors = [
    {name = "Christoffer Björkskog"},
    {name = "Lamin Jatta"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "docling>=2.94.0",
    "pymupdf>=1.27.2.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.5.0",
    "openai>=1.0",
    "mcp>=1.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiofiles>=24.1.0",
    "typer>=0.12.0",
    "sse-starlette>=2.1.0",
    "trimesh>=4.0",
    "playwright>=1.59.0",
    "sentence-transformers>=5.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "import-linter>=2.0",
    "ruff>=0.6.0",
    "Pillow>=10.0",
]
local-embed = [
    "sentence-transformers>=3.0",
]
fmus = [
    "fmpy>=0.3",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs>=1.6",
    "pymdown-extensions>=10.0",
]

[project.scripts]
anchor = "anchor.adapters.cli.main:app"
anchor-mcp = "anchor.adapters.mcp.stdio_main:main"

# Tell hatch to include web/dist/ as a build artifact even though it is
# gitignored. The wheel hook below includes it in release wheels, while
# editable installs remain usable before a frontend build exists.
[tool.hatch.build]
artifacts = ["web/dist/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/anchor"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/anchor",
    "web",
    "tests",
    "scripts",
    "README.md",
    "EXTENSIONS.md",
    "OIP.md",
    "conftest.py",
    "hatch_build.py",
    ".importlinter",
    "pyproject.toml",
]
exclude = [
    "web/node_modules",
    "**/__pycache__",
    "**/.pytest_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
# `-m slow` opt-in for integration tests that need real chromium / network.
addopts = "-m 'not slow'"
markers = [
    "slow: integration tests that require external resources (chromium, running server, etc.).",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Body",
  "fastapi.Depends",
  "fastapi.File",
  "fastapi.Form",
  "fastapi.Query",
  "typer.Argument",
  "typer.Option",
]
