[project]
name = "backend"
version = "0.1.0"
description = "Knowledge Base Backend with RAG"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ag-ui-protocol>=0.1.10",
    "uvicorn",
    "fastapi",
    "pydantic-ai-slim[ag-ui,openai]>=1.68",
    "pydantic-settings>=2.0.0",
    "python-dotenv",
    "devtools>=0.12.2",
    "rich>=14.2.0",
    "docling>=2.63.0",
    "asyncpg>=0.29.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "tiktoken>=0.12.0",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "nbformat>=5.10.4",
    "llama-index-llms-azure-openai>=0.3.0",
    "llama-index-embeddings-azure-openai>=0.3.0",
    "ketju[rag,docling,pgvector,agent,agui]",
    "fmpy>=0.3.22",
    "kaleido>=1.2.0",
]

[tool.uv.sources]
ketju = { path = "../../mini_apps/ketju", editable = true }

